test/files/neg/deprecated-options.scala
//
// scalac: -Werror -deprecation -optimise -Xexperimental -Xfuture -target:jvm-1.7
//
// Deprecated options are announced before compilation.
